--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.6.0",
     "react-infinite-scroll-up-n-down": "^1.3.3",
-    "react-player": "^2.10.1",
+    "react-player": "^2.11.2",
     "react-redux": "^7.2.4",
     "react-responsive-video": "^1.3.1",
     "react-reveal": "^1.2.2",
@@ -26,6 +26,7 @@
     "react-scroll-up-button": "^1.6.4",
     "react-slideshow-image": "^3.7.5",
     "react-vertical-timeline-component": "^3.5.2",
+    "reactjs-media": "^2.2.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "swiper": "^8.1.5",
